# setup.cfg
[metadata]
name = facebook_page_info_scraper
version = attr: facebook_page_info_scraper.version.__version__
author = Wael Hkiri
author_email = wael.hkiri.dev@gmail.com
keywords = facebook scraping, scraping, facebook crawler, facebook page, selenium, crawler, scraper, facebook

# add a description of your package
description = A Python package capable of crawling Facebook page information.
long_description = file: README.rst
long_description_content_type = text/x-rst

# add the url to your repository/homepage and version release
url = https://github.com/wael-sudo2/facebook-page-info-scraper
download_url = https://github.com/wael-sudo2/facebook-page-info-scraper/archive/refs/tags/v1.1.5.tar.gz

# define your license and license file
license = MIT
license_files = LICENSE.txt

classifiers = 
    # for a full list of classifiers see https://pypi.org/classifiers/
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers      
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.10

[options]
install_requires =
    # list the dependencies required by your package
    geopy==2.2.0
    retry~=0.9.2
    selenium~=4.8.2
    googletrans~=4.0.0rc1

python_requires = >=3.10